Changing app name and updating packages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: IrshadMusic
-description: A new Flutter project.
+name: musito
+description: A music Player app.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
